# databridge

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  reader.py  requirements.txt  writer.py
adapters/: _config.py
adapters/storage/: __init__.py  _abstract.py  _local.py  abstract.py  enum.py  local.py
databridge/: _config.py
databridge/_data/_test_assets/: test.csv
databridge/database/: __init__.py  _abstract.py  _enum.py  _postgres.py  _sqlite.py
databridge/storage/: __init__.py  _abstract.py  _enum.py  _local.py  _s3.py
docker/: Dockerfile  docker-compose.yml
src/database/: __init__.py
src/storage/: abstract.py  enum.py
tests/: config_test.py  test_config.py
tests/database/: test_abstract.py  test_enum.py  test_postgres.py  test_sqlite.py
tests/storage/: abstract_test.py  enum_test.py  local_test.py  test_abstract.py  test_enum.py  test_local.py  test_s3.py
