[tool.poetry]
name = "databridge"
version = "0.1.0"
description = "Developer toolkit for convenience and maintainability when reading, writing, extracting, and loading data. Abstract and extensible interface that leverages adapter, repository, and factory design patterns."
authors = ["Noah Horsley <nphorsley59@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.0.0"
pandas = "2.2.2"
pyarrow = "16.1.0"
setuptools = "70.2.0"
lxml = "^5.2.2"
openpyxl = "^3.1.5"
boto3 = "^1.34.146"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
ipython = "8.26.0"
pytest = "8.2.2"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']